--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "clean-webpack-plugin": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
     "webpack-merge": "^4.2.1",
