--- a/package.json
+++ b/package.json
@@ -15,24 +15,28 @@
   "author": "ikonovalov",
   "license": "ISC",
   "dependencies": {
-    "bootstrap-css-only": "^4.3.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-router-dom": "^4.3.1",
-    "css-loader": "^2.1.1",
-    "style-loader": "^0.23.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/free-regular-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "bootstrap-css-only": "^4.3.1",
     "clean-webpack-plugin": "^2.0.1",
+    "css-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-router-dom": "^4.3.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-merge": "^4.2.1",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.2.1"
