--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack/prod.config.js",
-    "start": "NODE_ENV=development webpack-dev-server --config webpack/dev.config.js",
+    "start": "NODE_ENV=development webpack-dev-server --config webpack/dev.config.js"
   },
   "repository": {
     "type": "git",
